--- a/android UI/app/src/main/res/values/strings.xml
+++ b/android UI/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Team Project</string>
+    <string name="tv_take_photo">Take photo</string>
+    <string name="tv_description">Take a new photo</string>
+    <string name="tv_placeholder">Object detection</string>
 </resources>
