사진첩 기능 추가

--- a/android UI/app/src/main/res/values/strings.xml
+++ b/android UI/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Team Project</string>
+    <string name="app_name">사랑회요</string>
     <string name="tv_take_photo">Take photo</string>
     <string name="tv_description">Take a new photo</string>
     <string name="tv_placeholder">Object detection</string>
